<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拼了</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="fragment_pin_text">这是拼单</string>
    <string name="fragment_message_text">这是消息</string>
    <string name="fragment_search_text">这是搜索</string>
    <string name="fragment_mine_text">这是我的</string>
    <string name="tab_pin">拼单</string>
    <string name="tab_message">消息</string>
    <string name="tab_search">搜索</string>
    <string name="tab_mine">我的</string>
    <string name="back">"返回"</string>
    <string name="title_pin">拼单</string>
    <string name="title_message">消息</string>
    <string name="title_search">搜索</string>
    <string name="title_mine">我的</string>
    <string name="exit">"退出"</string>
    <string name="sponsor">"发起"</string>
    <string name="online">"线上发拼单"</string>
    <string name="offline">"线下发拼单"</string>
    <string name="sendSucceed">发送成功</string>
    <string name="sendFailed">发送失败</string>
    <string name="verifyFailed">验证失败</string>
    <string name="verifySucceed">验证成功</string>
    <string name="modifyOrder">修改拼单</string>
    <string name="cancelOrder">取消拼单</string>
    <string name="finishOrder">拼单成功</string>
    <string name="pauseOrder">人数已满</string>
    <string name="resumeOrder">恢复拼单</string>
    <string name="partcipateOrder">加入拼单</string>
    <string name="quitOrder">退出拼单</string>
    <string name="collectorder">收藏拼单</string>
    <string name="quxiaocollect">取消收藏</string>
    <string name="notif_group">聊天组有一个新消息</string>
    <string name="cloneOrder">克隆拼单</string>
    <string name="dialog_title_remind">提示</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="dialog_text_analize">网页解析中...</string>
    <string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	<string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
	<string name="weibosdk_demo_toast_auth_success">授权成功</string>
	<string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
	<string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    
    <string-array name = "string_sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name = "string_age_range">
        <item>60后</item>
        <item>70后</item>
        <item>80后</item>
        <item>90后</item>
        <item>00后</item>
    </string-array>
    <string-array name = "string_on_or_off">
        <item>online</item>
        <item>offline</item>
    </string-array>
    
</resources>
